...
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/edit_text_attempt"
                    tools:ignore="Autofill"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/game_answer_attempt_hint"
                    android:layout_marginEnd="8dp"
                    android:maxLines="1"
                    android:maxLength="200"
                    android:imeOptions="actionSend"
                    android:layout_gravity="center_vertical"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_send_attempt"
                    android:src="@drawable/ic_round_send_20dp"
                    android:contentDescription="@string/game_button_send_content_description"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

...
