...
\t- Every 5 seconds, a new random character is revealed from the answer (defined as a split)\n
\t- Entries range from 10 to 100 points in value (based on their difficulty)\n
\t- Their value decreases as more characters are revealed\n
\t- The first player to submit the correct answer wins the prize and the round is over\n
\t- This is a real-time multiplayer game, be nice to each other 😉\n\n
Hint: you can disable this dialog in the Settings screen</string>
    <string name="game_dialog_positive_button_rules">Let\'s play</string>
    <string name="game_dialog_negative_button_rules">Take me back</string>

    <!--Dialog-->
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>
    <string name="dialog_dismiss">Dismiss</string>
...
